add class filter

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -75,4 +75,8 @@
         <item>Messaging</item>
         <item>Device</item>
     </string-array>
+     <string-array name="page_name">
+      <item >User App</item>
+      <item >System App</item>
+  </string-array>
 </resources>
