--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -1,9 +1,25 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/location"
         android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
-
+        android:menuCategory="container"
+        android:showAsAction="ifRoom"
+        android:title="@string/location"/>
+    <item
+        android:id="@+id/personal"
+        android:orderInCategory="100"
+        android:showAsAction="withText"
+        android:title="@string/personal"/>
+    <item
+        android:id="@+id/sms"
+        android:orderInCategory="100"
+        android:showAsAction="withText"
+        android:title="@string/sms"/>
+    <item
+        android:id="@+id/location"
+        android:orderInCategory="100"
+        android:showAsAction="withText"
+        android:title="@string/device"/>
+	
 </menu>
