--- a/res/values-zh-rCN/arrays.xml
+++ b/res/values-zh-rCN/arrays.xml
@@ -92,4 +92,8 @@
     <item msgid="4588829735729884491">"短信"</item>
     <item msgid="8971765125227378270">"设备"</item>
   </string-array>
+  <string-array name="page_name">
+      <item >基本应用</item>
+      <item >系统应用</item>
+  </string-array>
 </resources>
